--- a/JPCadastro/JPCadastro/JPCadastro.csproj
+++ b/JPCadastro/JPCadastro/JPCadastro.csproj
@@ -7,11 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\JPCadastro.Core\JPCadastro.Core.csproj" />
+    <ProjectReference Include="..\JPCadastro.Infra.Data\JPCadastro.Infra.Data.csproj" />
+    <ProjectReference Include="..\JPCadastro.Operacional\JPCadastro.Operacional.csproj" />
   </ItemGroup>
 
 </Project>
