--- a/JPCadastro/JPCadastro.Infra.Data/JPCadastro.Infra.Data.csproj
+++ b/JPCadastro/JPCadastro.Infra.Data/JPCadastro.Infra.Data.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\JPCadastro.Operacional\JPCadastro.Operacional.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
