--- a/JPCadastro/.gitignore
+++ b/JPCadastro/.gitignore
@@ -356,6 +356,9 @@ healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 
+# Backup folder for Package Reference Convert tool in Visual Studio 2017
+Migrations/
+
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
