--- a/BackEnd/JPCadastro/JPCadastro/JPCadastro.csproj
+++ b/BackEnd/JPCadastro/JPCadastro/JPCadastro.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="prmToolkit.EnumExtension" Version="2.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
