--- a/BackEnd/JPCadastro/JPCadastro.Infra.Data/JPCadastro.Infra.Data.csproj
+++ b/BackEnd/JPCadastro/JPCadastro.Infra.Data/JPCadastro.Infra.Data.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20220513184056_TabelaInicial2.cs" />
+    <Compile Remove="Migrations\20220513184056_TabelaInicial2.Designer.cs" />
+    <Compile Remove="Migrations\JPCadastroContextModelSnapshot.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
