--- a/BackEnd/JPCadastro/JPCadastro.Operacional/JPCadastro.Operacional.csproj
+++ b/BackEnd/JPCadastro/JPCadastro.Operacional/JPCadastro.Operacional.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Enums.NET" Version="4.0.0" />
+    <PackageReference Include="Google.Protobuf" Version="3.21.1" />
     <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
 
