--- a/BackEnd/JPCadastro/JPCadastro/appsettings.json
+++ b/BackEnd/JPCadastro/JPCadastro/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MyConnection": "server=mysql.ispac.com.br;port=3306;database=ispac24;uid=ispac24;password=ispac123"
+    "MyConnection": ""
   },
   "AllowedHosts": "*"
 }
